src/objects/Volunteer_Opportunity__c.object
<CustomObject>
    <description>It holds the related Case, Event, User and Role Name</description>
    <fields>
        <fullName>About_Me__c</fullName>
        <description>It will display the details about volunteer contact&apos;s about me filed value</description>
        <formula>Wish__r.Contact.About_Me__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>About Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>It will display the contact current age of the wish</description>
        <formula>Wish__r.Contact.Current_Age__c</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>It is used to identify the status of the record</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the chapter named of Account</description>
        <label>Chapter Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Volunteer Opportunities</relationshipLabel>
        <relationshipName>Volunteer_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Role_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field look up with Chapter Role</description>
        <label>Chapter Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Chapter_Role__c.Chapter_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Chapter_Name__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Chapter_Role__c</referenceTo>
        <relationshipLabel>Volunteer Opportunities</relationshipLabel>
        <relationshipName>Volunteer_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>It will display city value</description>
        <formula>Wish__r.Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <description>Date and time for volunteer opportunities</description>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used to store the description value entered from Add voulnteer role vf page</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Event date indicated when the event started</description>
        <formula>Non_Wish_Event__r.Event_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <description>Formula field used to know the Event description fields</description>
        <formula>Non_Wish_Event__r.Event_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>This Holds the value of event name</description>
        <formula>Non_Wish_Event__r.Event_Name__c</formula>
        <label>Non-WIsh/Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <description>This field is used to store the value of Event URL from Non wish and event record.</description>
        <formula>Non_Wish_Event__r.Event_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It hold the record of each event</description>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Volunteer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id used for Mulesoft upsert.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_L_I__c</fullName>
        <description>This holds the value of first name and last name initial</description>
        <formula>Wish__r.Contact.First_Last_Initial__c</formula>
        <label>First + L.I.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>It will display the gender</description>
        <formula>TEXT(Wish__r.Contact.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenVolunteer_Count_Description__c</fullName>
        <description>This field is used to store the description of the Role. it is used in Add volunteer role inline visual-force page</description>
        <label>HiddenVolunteer Count Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Email__c</fullName>
        <description>This field is used store the chapter email for sending email purpose.</description>
        <formula>Chapter_Name__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Name__c</fullName>
        <description>This hidden field is used to hold the account name for email purpose.</description>
        <formula>Chapter_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Phone__c</fullName>
        <description>This field is used to store the Chapter phone number email purpose.</description>
        <formula>Chapter_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Role_Name__c</fullName>
        <description>This field is used to store the role name of the current volunteer opportunity.</description>
        <formula>Chapter_Role_Opportunity__r.Role_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Non_Wish_Event_Date__c</fullName>
        <description>This field is used to store the Store the Non - Wish Event Date Value.</description>
        <formula>Non_Wish_Event__r.Event_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Non Wish Event  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Non_Wish_Event_Name__c</fullName>
        <description>This field is used to store the value for Non-Wish Event Name for email purpose.</description>
        <formula>Non_Wish_Event__r.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Non Wish Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_VolunteerCount_Desc__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Volunteer_Contact_Email__c</fullName>
        <description>This field is used to store the value of Volunteer contact email for email purpose.</description>
        <label>Hidden Volunteer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden_Volunteer_Contact_Name__c</fullName>
        <description>This field is used to store the volunteer contact name for sending email purpose.</description>
        <formula>Volunteer_Name__r.FirstName+&apos; &apos;+ Volunteer_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Volunteer Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <description>It hold the value of wish child hobby</description>
        <formula>Wish__r.Contact.Hobby__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hobbies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivated_or_Rejected_Date__c</fullName>
        <description>Used to hold rejected or inactivated date</description>
        <label>Hidden Inactivated or Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used when the to identify whether the volunteer opportunity is active or not.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Non_Viewable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will checked when the volunteer opportunity created via the case status changed to Ready To Assign</description>
        <label>Is Non-Viewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>It will hold the language from wish child</description>
        <formula>IF(INCLUDES( Wish__r.Contact.Language__c , &quot;American Sign Language&quot;), &quot;American Sign Language&quot;, NULL)  +

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Arabic&quot;), &quot;Arabic&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Chinese&quot;), &quot;Chinese&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;English&quot;), &quot;English&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;French and French Creole&quot;), &quot;French and French Creole&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;German&quot;), &quot;German&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Hindi&quot;), &quot;Hindi&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Italian&quot;), &quot;Italian&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Japanese&quot;), &quot;Japanese&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Korean&quot;), &quot;Korean&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Polish&quot;), &quot;Polish&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Portuguese&quot;), &quot;Portuguese&quot;, NULL)  + &apos; &apos; +

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Russian&quot;), &quot;Russian&quot;, NULL)  + &apos; &apos; +

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Spanish&quot;), &quot;Spanish&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Tagalog&quot;), &quot;Tagalog&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Vietnamese&quot;), &quot;Vietnamese&quot;, NULL)  + &apos; &apos; + 

IF(INCLUDES( Wish__r.Contact.Language__c , &quot;Other&quot;), &quot;Other&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>This field is used to store the value of location.</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <description>It will display the medical condition of the wish</description>
        <formula>Wish__r.Contact.Diagnosis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Diagnosis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to inform the is migrated record or not</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NWE_City__c</fullName>
        <description>It will display the city value</description>
        <formula>Non_Wish_Event__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NWE_Date__c</fullName>
        <description>It will display the event date on volunteer opportunity</description>
        <formula>Non_Wish_Event__r.Event_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NWE_Day_of_The_Week__c</fullName>
        <description>Formula to display no of Days in a week or total weeks</description>
        <formula>IF(INCLUDES( Non_Wish_Event__r.Day_of_The_Week__c   , &quot;Sunday&quot;), &quot;Sunday&quot;, NULL)  +BR()+ 
IF(INCLUDES( Non_Wish_Event__r.Day_of_The_Week__c   , &quot;Monday&quot;), &quot;Monday&quot;, NULL)  + BR()+
IF(INCLUDES( Non_Wish_Event__r.Day_of_The_Week__c   , &quot;Tuesday&quot;), &quot;Tuesday&quot;, NULL)  + BR()+
IF(INCLUDES( Non_Wish_Event__r.Day_of_The_Week__c   , &quot;Wednesday&quot;), &quot;Wednesday&quot;, NULL)  + BR()+
IF(INCLUDES( Non_Wish_Event__r.Day_of_The_Week__c   , &quot;Thursday&quot;), &quot;Thursday&quot;, NULL)  + BR()+
IF(INCLUDES( Non_Wish_Event__r.Day_of_The_Week__c   , &quot;Friday&quot;), &quot;Friday&quot;, NULL)  + BR()+
IF(INCLUDES( Non_Wish_Event__r.Day_of_The_Week__c   , &quot;Saturday&quot;), &quot;Saturday&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of The Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NWE_End_Time__c</fullName>
        <description>It will display the end time value from the Non wish event record</description>
        <formula>TEXT(Non_Wish_Event__r.End_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NWE_Non_Wish_Event_Title__c</fullName>
        <description>It will display non wish / event title</description>
        <formula>Non_Wish_Event__r.Non_Wish_Event_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Wish/ Event Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NWE_Start_Time__c</fullName>
        <description>It will display start time of the event on the volunteer opportunity</description>
        <formula>TEXT(Non_Wish_Event__r.Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NWE_Volunteer_Opportunity_Notes__c</fullName>
        <description>It will display volunteer opportunity notes</description>
        <formula>Non_Wish_Event__r.Volunteer_Opportunity_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Opportunity Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NWE_Zip__c</fullName>
        <description>It will display zip value</description>
        <formula>Non_Wish_Event__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Used to display name of the non wish event</description>
        <formula>Wish__r.Contact.FirstName &amp; &apos; &apos; &amp; Wish__r.Contact.LastName</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Verbal__c</fullName>
        <description>Its indicating wish&apos;s facilitating communication.</description>
        <formula>Text(Wish__r.Contact.Non_Verbal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non - Verbal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Wish_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It hold the record of each event</description>
        <label>Name</label>
        <referenceTo>Non_Wish_Events__c</referenceTo>
        <relationshipLabel>Volunteer Opportunities</relationshipLabel>
        <relationshipName>Volunteer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RE_Created_Date__c</fullName>
        <description>DATEADDED</description>
        <label>RE Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>This field is used to hold the record Id.</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Modified_Date__c</fullName>
        <description>DATECHANGED</description>
        <label>RE Last Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Role__c</fullName>
        <description>&quot;VOLUNTEER_TYPE
RECIP_RELATION_CODE&quot;</description>
        <label>RE Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Volunteer_Notes__c</fullName>
        <label>RE Volunteer Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Volunteer_Opportunity_Id__c</fullName>
        <description>IMPORT_ID</description>
        <label>RE Volunteer Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Inactive__c</fullName>
        <description>This field is get the values when the volunteer contact is removed form the volunteer Name field.</description>
        <label>Reason Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Forms_for_Volunteers__c</fullName>
        <description>This pick list is used to differentiate the forms for volunteer</description>
        <label>Required Forms for Volunteers</label>
        <picklist>
            <picklistValues>
                <fullName>Single Day Event Volunteers Fact Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Application Fact Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Conflict of Interest &amp; Ethics Assurance Statement Fact Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Advantage Fact Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associates Database: How to Guide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>It will display the role name</description>
        <formula>Chapter_Role_Opportunity__r.Role_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>It indicate different status of the volunteer opportunity.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>This filed would be store the sum of the total hours of the time sheet</description>
        <label>Total Hours</label>
        <summarizedField>Time_sheet__c.Hours_spent__c</summarizedField>
        <summaryFilterItems>
            <field>Time_sheet__c.Hours_spent__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Time_sheet__c.Volunteer_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to choose the name of the volunteer contact</description>
        <label>Volunteer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Opportunities</relationshipLabel>
        <relationshipName>Volunteer_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will lookup to the contact, which record type as volunteer</description>
        <label>Volunteer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact, Board Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Opportunities (Volunteer Name)</relationshipLabel>
        <relationshipName>Volunteer_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Notes__c</fullName>
        <description>It will capture the volunteer notes information</description>
        <label>Volunteer Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunity_Id_Hidden__c</fullName>
        <description>Hidden field used to get Volunteer opportunity id</description>
        <formula>Name</formula>
        <label>Volunteer Opportunity Id Hidden</label>
        <type>Text</type>
    </fields>
</CustomObject>